[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Sprites/Misc/Extra.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Misc/StaticLines.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Codes/ExtraSelection.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Misc/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/Misc/ExtraSelector.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Misc/Pointer.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/TooltipFont.tres" type="Theme" id=8]
[ext_resource path="res://Assets/SFX/MenuSelected.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/Error.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Fonts/NiceFont.tres" type="DynamicFont" id=13]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=7]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=23]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="Animation" id=9]
resource_name = "Hovering"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Holder/Sprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Holder/Sprite/PointerLeft:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -80, -8 ), Vector2( -78, -8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Holder/Sprite/PointerRight:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 8 ), Vector2( 78, 8 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Holder/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Holder/Sprite/PointerLeft:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Holder/Sprite/PointerRight:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Holder/Sprite/PointerRight:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 78, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Holder/Sprite/PointerLeft:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -78, -8 ) ]
}

[node name="ExtraSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BackerGround" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 536.0
margin_bottom = 322.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 150 )
texture = ExtResource( 1 )

[node name="StaticLines" type="Sprite" parent="Background"]
modulate = Color( 1, 0.421875, 0, 0.196078 )
texture = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 256, 150 )
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Holder" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Back" type="Button" parent="Holder"]
margin_left = 232.0
margin_top = 248.0
margin_right = 280.0
margin_bottom = 280.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.4, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.72549, 0.458824, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
action_mode = 0
text = "Back"

[node name="Title" type="Label" parent="Holder"]
margin_top = 32.0
margin_right = 512.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 0, 0.211765, 1 )
custom_fonts/font = SubResource( 8 )
text = "< PICK YOUR EXTRA CONTENT >"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Holder"]
position = Vector2( 256, 160 )
texture = ExtResource( 6 )
offset = Vector2( 0, -2 )
hframes = 4
frame = 3

[node name="PointerLeft" type="Button" parent="Holder/Sprite"]
margin_left = -78.0
margin_top = -8.0
margin_right = -62.0
margin_bottom = 14.0
rect_rotation = 89.9999
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
action_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="PointerRight" type="Button" parent="Holder/Sprite"]
margin_left = 78.0
margin_top = 24.0
margin_right = 94.0
margin_bottom = 46.0
rect_rotation = -89.9999
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
action_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="Enter" type="Button" parent="Holder/Sprite"]
margin_left = -20.0
margin_top = 64.0
margin_right = 20.0
margin_bottom = 86.0
custom_colors/font_color_disabled = Color( 1, 0.768627, 0.678431, 1 )
custom_colors/font_color_focus = Color( 0.686275, 0.298039, 0.298039, 1 )
custom_colors/font_color = Color( 1, 0.768627, 0.678431, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0.768627, 0.678431, 1 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
action_mode = 0
text = "Enter"
flat = true

[node name="Indicator" type="Label" parent="Holder"]
visible = false
margin_top = 152.0
margin_right = 512.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
custom_fonts/font = SubResource( 7 )
text = "YOU NEED 1 MEMORY TO ENTER"
align = 1
valign = 1

[node name="DifficultyBorder" type="ColorRect" parent="."]
visible = false
margin_left = -16.0
margin_top = -16.0
margin_right = 528.0
margin_bottom = 316.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Border" type="ColorRect" parent="DifficultyBorder"]
margin_top = 144.0
margin_right = 544.0
margin_bottom = 208.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="DifficultyBorder/Border"]
anchor_left = 0.171875
anchor_top = 0.693333
anchor_right = 0.816406
anchor_bottom = 0.693333
margin_left = -181.5
margin_top = -60.3733
margin_right = 184.875
margin_bottom = -34.3733
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "How will you like your difficulty sir?"
align = 1
valign = 1

[node name="Title2" type="Label" parent="DifficultyBorder/Border"]
anchor_left = 0.171875
anchor_top = 0.693333
anchor_right = 0.816406
anchor_bottom = 0.693333
margin_left = 111.5
margin_top = 3.62669
margin_right = -108.125
margin_bottom = 29.6267
custom_colors/font_color = Color( 1, 1, 1, 0.588235 )
custom_fonts/font = SubResource( 23 )
text = "press \"ESC\" to hide"
align = 1
valign = 1

[node name="Hard" type="Button" parent="DifficultyBorder/Border"]
margin_left = 80.0
margin_top = 19.0
margin_right = 184.0
margin_bottom = 45.0
focus_neighbour_left = NodePath("../Extra")
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_right = NodePath("../Extra")
focus_neighbour_bottom = NodePath("../Begin")
theme = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0.211765, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.211765, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
action_mode = 0
text = "I like it hard bitch"

[node name="Soft" type="Button" parent="DifficultyBorder/Border"]
margin_left = 224.0
margin_top = 19.0
margin_right = 320.0
margin_bottom = 45.0
focus_neighbour_left = NodePath("../Extra")
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_right = NodePath("../Extra")
focus_neighbour_bottom = NodePath("../Begin")
theme = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.45098, 1, 0.866667, 1 )
custom_colors/font_color = Color( 0, 0.937255, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.376471, 1, 1 )
custom_colors/font_color_pressed = Color( 0.45098, 1, 0.866667, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
action_mode = 0
text = "i-i like it s-soft!"

[node name="Baby" type="Button" parent="DifficultyBorder/Border"]
margin_left = 376.0
margin_top = 19.0
margin_right = 472.0
margin_bottom = 45.0
focus_neighbour_left = NodePath("../Extra")
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_right = NodePath("../Extra")
focus_neighbour_bottom = NodePath("../Begin")
theme = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.984314, 0.572549, 1, 1 )
custom_colors/font_color = Color( 0.984314, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.984314, 0.572549, 1, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
action_mode = 0
text = "\"goo goo gaa gaa\""

[node name="Transition" parent="." instance=ExtResource( 5 )]

[node name="Selecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "SFX"

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0
bus = "SFX"

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Hovering"
anims/Hovering = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="focus_entered" from="Holder/Back" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="Holder/Back" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="Holder/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Holder/Sprite/PointerLeft" to="." method="_on_PointerLeft_pressed"]
[connection signal="pressed" from="Holder/Sprite/PointerRight" to="." method="_on_PointerRight_pressed"]
[connection signal="focus_entered" from="Holder/Sprite/Enter" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="Holder/Sprite/Enter" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="Holder/Sprite/Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="DifficultyBorder/Border/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="DifficultyBorder/Border/Soft" to="." method="_on_Soft_pressed"]
[connection signal="pressed" from="DifficultyBorder/Border/Baby" to="." method="_on_Baby_pressed"]
[connection signal="animation_finished" from="Transition/Animation" to="." method="_on_Animation_animation_finished"]

[editable path="Transition"]
